# axonos-kernel

./: ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  build.rs  clippy.toml  deny.toml  link.x  memory.x  rust-toolchain.toml  rustfmt.toml
.github/workflows/: Cargo.toml  ci.yml  deny.toml  release.yml
axonos-capability/: Cargo.toml  README.md
axonos-capability/kani-proofs/: Cargo.toml
axonos-capability/kani-proofs/src/: main.rs
axonos-capability/src/: lib.rs
axonos-firmware-stm32f407/: Cargo.toml  LICENSE-MIT  README.md  build.rs  memory.x
axonos-firmware-stm32f407/.cargo/: config.toml
axonos-firmware-stm32f407/src/: main.rs
axonos-intent/: Cargo.toml  README.md
axonos-intent/kani-proofs/: Cargo.toml
axonos-intent/kani-proofs/src/: main.rs
axonos-intent/src/: lib.rs
axonos-kernel-core/: Cargo.toml  LICENSE-APACHE  README.md
axonos-kernel-core/src/: lib.rs
axonos-scheduler/: Cargo.toml  LICENSE-APACHE  README.md
axonos-scheduler/kani-proofs/: Cargo.toml
axonos-scheduler/kani-proofs/src/: main.rs
axonos-scheduler/src/: lib.rs
axonos-spsc/: Cargo.toml  LICENSE-MIT  README.md
axonos-spsc/kani-proofs/: Cargo.toml
axonos-spsc/kani-proofs/src/: main.rs
axonos-spsc/src/: lib.rs
axonos-time/: Cargo.toml  README.md
axonos-time/kani-proofs/: Cargo.toml
axonos-time/kani-proofs/src/: main.rs
axonos-time/src/: lib.rs
docs/: ARCHITECTURE.md  CAPABILITY_MODEL.md  IPC_CONTRACT.md  SCHEDULER.md  SIGNAL_PATH.md  VALIDATION.md
examples/: basic_pipeline.rs  consent_demo.rs  dualcore_demo.rs
kani_proofs/: heartbeat_proof.rs  mod.rs  spsc_proof.rs
scripts/: build.sh  evt_gumbel_fit.py  measure_wcrt.py
src/: lib.rs
src/attestation/: hmac.rs  mod.rs
src/capability/: catalogue.rs  dispatch.rs  manifest.rs  mod.rs
src/consent/: fsm.rs  interlock.rs  mod.rs
src/hal/: critical_section.rs  irq.rs  memory.rs  mod.rs
src/ipc/: contract.rs  dualcore.rs  mod.rs
src/platform/: adc.rs  cortex_m33.rs  cortex_m4f.rs  dma.rs  dwt.rs  gpio.rs  mod.rs  spi.rs
src/ringbuf/: mod.rs  sequence.rs  spsc.rs
src/scheduler/: admission.rs  edf.rs  mod.rs  task.rs
src/signal/: artifact.rs  csp.rs  fir.rs  kalman.rs  lda.rs  mod.rs  notch.rs  pipeline.rs
src/zerocalib/: alignment.rs  mdm.rs  mod.rs  riemannian.rs
tests/: integration_tests.rs  ipc_tests.rs  schedulability_tests.rs  spsc_tests.rs
