[package]
name = "axonos-firmware-stm32f407"
version = "0.1.8"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["Denis Yermakou <denis@axonos.org>"]
description = "Bare-metal Cortex-M4F firmware for the AxonOS reference platform (STM32F407). Boots the kernel-core integration, configures the DWT cycle counter as the MonotonicClock, and runs a 4-millisecond BCI signal tick. Builds for thumbv7em-none-eabihf; not tested in this repository (requires hardware or QEMU)."
repository = "https://github.com/AxonOS-org/AxonOS-kernel"
keywords = ["no-std", "embedded", "bare-metal", "cortex-m", "bci"]
categories = ["embedded", "no-std"]

# This package builds only for the embedded target. We exclude it from
# the workspace so `cargo test --workspace` does not try to compile it
# against the host target where cortex-m crates do not link.
[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# AxonOS workspace dependencies
axonos-kernel-core = { version = "0.1.8", path = "../axonos-kernel-core" }
axonos-time = { version = "0.1.8", path = "../axonos-time" }
axonos-scheduler = { version = "0.1.8", path = "../axonos-scheduler" }
axonos-capability = { version = "0.1.8", path = "../axonos-capability" }
axonos-intent = { version = "0.1.8", path = "../axonos-intent" }
axonos-spsc = { version = "0.1.8", path = "../axonos-spsc" }

[[bin]]
name = "axonos-firmware-stm32f407"
path = "src/main.rs"
test = false
bench = false

# Release profile tuned for the embedded target
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true        # Symbols retained for cortex-m gdb debugging.
opt-level = "s"     # Size-optimised.

[workspace]
