[package]
name = "axonos-kernel-core"
version = "0.1.5"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["Denis Yermakou <denis@axonos.org>"]
description = "Integration layer for the AxonOS kernel. Composes the five foundational crates (spsc, scheduler, capability, time, intent) into a coherent BCI signal pipeline running on a 4-millisecond tick. Hardware-independent — bring your own MonotonicClock. #![no_std], #![forbid(unsafe_code)]."
repository = "https://github.com/AxonOS-org/AxonOS-kernel"
keywords = ["no-std", "embedded", "bci", "real-time", "kernel"]
categories = ["embedded", "no-std"]

[features]
default = []
std = ["axonos-time/std", "axonos-intent/std"]

[dependencies]
axonos-spsc = { version = "0.1.5", path = "../axonos-spsc" }
axonos-scheduler = { version = "0.1.5", path = "../axonos-scheduler" }
axonos-capability = { version = "0.1.5", path = "../axonos-capability" }
axonos-time = { version = "0.1.5", path = "../axonos-time" }
axonos-intent = { version = "0.1.5", path = "../axonos-intent" }

[lib]
name = "axonos_kernel_core"
path = "src/lib.rs"
