[package]
name = "axonos-time"
version = "0.1.7"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
authors = ["Denis Yermakou <denis@axonos.org>"]
description = "Monotonic time abstraction for AxonOS. Hardware-independent trait, saturating fixed-point arithmetic, no allocator, no panics on the hot path. #![no_std], #![forbid(unsafe_code)], zero dependencies."
repository = "https://github.com/AxonOS-org/AxonOS-kernel"
keywords = ["no-std", "embedded", "time", "monotonic", "real-time"]
categories = ["embedded", "no-std", "date-and-time"]

[features]
default = []
# Enable the std-backed clock (uses `std::time::Instant`).
std = []

[lib]
name = "axonos_time"
path = "src/lib.rs"
