[workspace]
resolver = "2"
members = [
    "axonos-spsc",
    "axonos-scheduler",
    "axonos-capability",
    "axonos-time",
    "axonos-intent",
    "axonos-kernel-core",
]
exclude = [
    "axonos-spsc/kani-proofs",
    "axonos-scheduler/kani-proofs",
    "axonos-capability/kani-proofs",
    "axonos-time/kani-proofs",
    "axonos-intent/kani-proofs",
    "axonos-firmware-stm32f407",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/AxonOS-org/axonos-kernels"
authors = ["Denis Yermakou <denis@axonos.org>"]

[workspace.lints.clippy]
all = "deny"
missing_errors_doc = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = true
opt-level = "s"

[profile.bench]
codegen-units = 1
lto = "fat"
debug = true
